--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Hello World</title>
-    
+    <title>Mobilizm</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/jquery.mobile-1.3.2.min.css" rel="stylesheet" />
 </head>
 <body>
-    <button id="silly">Fuck it</button>
-    <button id="clear">Clear it</button>
-    <div id="results"></div>
+    <div data-role="page" >
+        <div data-theme="b" data-role="header">
+            <h3>Mobilizm</h3>
+        </div>
+        <div data-role="content">
+            <div data-role="fieldcontain">
+                <ul data-role="listview">
+                    <li ><a href="Reservation.html">Rezervasyon Yap</a></li>
+                    <li><a href="#">Rezervasyonlarımı Gör</a></li>
+                    <li><a href="#">Bilgilerim</a></li>
+                </ul>
+            </div>
+        </div>
+        <div data-theme="b" data-role="footer" data-position="fixed">
+            <h3>Mobilizm</h3>
+        </div>
+    </div>
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.mobile-1.3.2.js"></script>
 
-    <script src="js/zepto.js"></script>
-    <script src="js/library.js"></script>
-    <script>
-
-        $('#silly').click(function () {
-            SILLY.DoIt( $('#results') );
-        });
-        $('#clear').click(function () {
-            $('#results').html(' ');
-        });
-       
-    </script>
 </body>
 </html>
