--- a/index.html
+++ b/index.html
@@ -26,11 +26,18 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>
-    <script src="js/Cordova.js"></script>
-    <script src="js/index.js"></script>
-    <script type="text/javascript">
-        app.initialize();
+    <script src="js/cordova.js"></script>
+
+   <script type='text/javascript'>
+       function onLoad() {
+           document.addEventListener("deviceready", onDeviceReady, false);
+       }
+       function onDeviceReady() {
+           navigator.splashscreen.show();
+
+       }
+
        
-    </script>
+ </script>
 </body>
 </html>
