--- a/Reservation.html
+++ b/Reservation.html
@@ -5,16 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/jquery.mobile-1.3.2.min.css" rel="stylesheet" />
+
 </head>
 <body>
-    <div data-role="page" >
+    <div data-role="page">
         <div data-theme="b" data-role="header">
             <h3>Reservation</h3>
         </div>
-      
+        <div data-role="content">
+        </div>
         <div data-theme="b" data-role="footer" data-position="fixed">
             <h3>Reservation</h3>
         </div>
     </div>
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.mobile-1.3.2.js"></script>
 </body>
 </html>
