--- a/Main.html
+++ b/Main.html
@@ -4,13 +4,14 @@
     <title>Mobilizm</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/jquery.mobile-1.3.2.min.css" rel="stylesheet" />
-    
-   
+    <link href="css/Mobilizm.css" rel="stylesheet" />
+    <link href="css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" />
+
+  
 </head>
 <body onload="onLoad()">
     <div data-role="page">
-        <div data-theme="b" data-role="header">
+        <div data-theme="d" data-role="header">
             <h3>Mobilizm</h3>
         </div>
         <div data-role="content">
@@ -23,19 +24,19 @@
             </div>
         </div>
         <div data-role="footer" data-position="fixed">
-        <div data-role="navbar" data-iconpos="top">
-            <ul>
-                <li><a href="#"  data-icon="delete">One</a></li>
-                <li><a href="#">Two</a></li>
-                <li><a href="#">Three</a></li>
-            </ul>
+            <div data-role="navbar" data-iconpos="top">
+                <ul>
+                    <li><a href="#" data-icon="delete" data-theme="d">One</a></li>
+                    <li><a href="#">Two</a></li>
+                    <li><a href="#">Three</a></li>
+                </ul>
+            </div>
+
         </div>
-  
     </div>
-    </div>   
 
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>
-   
+
 </body>
 </html>
