--- a/index.html
+++ b/index.html
@@ -4,68 +4,45 @@
     <title>Mobilizm</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/jquery.mobile-1.3.2.min.css" rel="stylesheet" />
+    <link href="css/Mobilizm.css" rel="stylesheet" />
+    <link href="css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" />
+    <link href="css/Overriddingjquerymobile.css" rel="stylesheet" />
     <style>
-        div.ui-input-text {
-            border-radius: 0;
-        }
-
-        div.ui-input-search {
-            border-radius: 0;
-        }
-
-        textarea.ui-input-text {
-            border-radius: 0;
-        }
-
-        div.ui-input-text {
-            box-shadow: none;
-        }
-
-        div.ui-input-search {
-            box-shadow: none;
-        }
-
-        textarea.ui-input-text {
-            box-shadow: none;
-        }
-
-        .ui-controlgroup-vertical {
-            border-radius: 0;
-        }
-
-        div.ui-input-text {
-            background-image: none;
-            margin: 0 0;
+        .aaa {
+            display: inline-block;
         }
     </style>
 </head>
 <body>
-    <div data-theme="b" data-role="header">
-        <h3>Mobilizm Login Screen</h3>
+    <div data-theme="d" data-role="header">
+        <h3>Mobilizm Sign In</h3>
     </div>
     <div data-role="content">
 
         <div data-role="controlgroup">
-            <input type="text" id="username" placeholder="User Name">
-            <input type="text" id="password" placeholder="Password">
+            <div data-role="fieldcontain">
+                <input type="text" id="username" placeholder="Username">
+                <input type="text" id="password" placeholder="Password">
+            </div>
         </div>
-        <div data-role="controlgroup">
-            <a href="#" id="myhref" data-role="button" style="background: red; color: white">Login</a>
+        <div data-role="fieldcontain">
+            <!-- mobilizmred class ref Overriddingjquerymobile -->
+            <a href="#" data-theme="reset" class="mobilizmred" data-role="button">Sıgn In</a>
+            <a href="#" data-theme="reset" class="mobilizmred" data-role="button">Not a member?</a>
         </div>
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>
     <script>
-        
+
         $('#myhref').click(function () {
-           
-            localStorage.setItem("name", "Polat");
+
+            //localStorage.setItem("name", "Polat");
             $.mobile.changePage("Main.html", { transition: "flip" });
         });
         $(document).bind("pageinit", function () {
             if (localStorage.getItem("name") != null) {
-                $.mobile.changePage("Main.html", { transition: "flip" });
+                // $.mobile.changePage("Main.html", { transition: "flip" });
             }
         });
     </script>
