--- a/Main.html
+++ b/Main.html
@@ -6,37 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/Mobilizm.css" rel="stylesheet" />
     <link href="css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" />
-
-  
-</head>
-<body onload="onLoad()">
-    <div data-role="page">
-        <div data-theme="d" data-role="header">
-            <h3>Mobilizm</h3>
-        </div>
-        <div data-role="content">
-            <div data-role="fieldcontain">
-                <ul data-role="listview">
-                    <li><a href="Reservation.html">Rezervasyon Yap</a></li>
-                    <li><a href="#">Rezervasyonlarımı Gör</a></li>
-                    <li><a href="#">Bilgilerim</a></li>
-                </ul>
-            </div>
-        </div>
-        <div data-role="footer" data-position="fixed">
-            <div data-role="navbar" data-iconpos="top">
-                <ul>
-                    <li><a href="#" data-icon="delete" data-theme="d">One</a></li>
-                    <li><a href="#">Two</a></li>
-                    <li><a href="#">Three</a></li>
-                </ul>
-            </div>
-
-        </div>
-    </div>
-
     <script src="js/jquery.js"></script>
+    <script src="js/JSON.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>
+    <script src="js/BuildingMainPage.js"></script>
 
+</head>
+<body>
+    
 </body>
 </html>
