--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link href="css/Mobilizm.css" rel="stylesheet" />
     <link href="css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" />
     <link href="css/Overriddingjquerymobile.css" rel="stylesheet" />
-    <style>
-        .aaa {
-            display: inline-block;
-        }
-    </style>
+
 </head>
 <body>
     <div data-theme="d" data-role="header">
@@ -19,18 +15,19 @@
     </div>
     <div data-role="content">
 
-        <div data-role="controlgroup">
-            <div data-role="fieldcontain">
-                <input type="text" id="username" placeholder="Username">
-                <input type="text" id="password" placeholder="Password">
-            </div>
+
+        <div data-role="fieldcontain">
+            <input type="text" id="username" placeholder="Username">
+            <input type="text" id="password" placeholder="Password">
         </div>
+
         <div data-role="fieldcontain">
             <!-- mobilizmred class ref Overriddingjquerymobile -->
-            <a href="#" data-theme="reset" class="mobilizmred" data-role="button">Sıgn In</a>
-            <a href="#" data-theme="reset" class="mobilizmred" data-role="button">Not a member?</a>
+            <a href="#" id ="myhref" data-theme="reset" class="mobilizmred" data-role="button">Sign in</a>
+            <a href="NewUser.html" id ="newuser" data-theme="reset" class="mobilizmred" data-role="button" data-ajax="false">Not a member?</a>
         </div>
     </div>
+
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>
     <script>
@@ -40,9 +37,10 @@
             //localStorage.setItem("name", "Polat");
             $.mobile.changePage("Main.html", { transition: "flip" });
         });
+        
         $(document).bind("pageinit", function () {
             if (localStorage.getItem("name") != null) {
-                // $.mobile.changePage("Main.html", { transition: "flip" });
+                 $.mobile.changePage("Main.html", { transition: "flip" });
             }
         });
     </script>
