--- a/NewUser.html
+++ b/NewUser.html
@@ -23,12 +23,13 @@
                 myType.MobilePhone = $("#cellphone").val();
                 typesArray.push(myType);
 
+                $.support.cors = true;
                 $.getJSON("http://212.109.96.121:5556/Mobile/MobilizmService.svc/CreateCustomer?callback=?", { customers: JSON.stringify(typesArray), origin: 167440003, status: 167440001 })
                 .done(function (json) {
                     alert("ok");
                 })
                 .fail(function (jqxhr, textStatus, error) {
-                    alert("ok");
+                    alert("false");
                 });
                 //$.support.cors = true;
                 //$.ajax({
