--- a/NewUser.html
+++ b/NewUser.html
@@ -15,43 +15,37 @@
 
             $('#save').click(function () {
                 debugger;
+                jQuery.noConflict();
                 var typesArray = new Array();
                 var myType = new Object();
-                myType.FirstName = $("#name").val();
-                myType.LastName = $("#surname").val();
-                myType.EMailAddress1 = $("#email").val();
-                myType.MobilePhone = $("#cellphone").val();
+                myType.FirstName = jQuery("#name").val();
+                myType.LastName = jQuery("#surname").val();
+                myType.EMailAddress1 = jQuery("#email").val();
+                myType.MobilePhone = jQuery("#cellphone").val();
                 typesArray.push(myType);
 
-                $.support.cors = true;
-                $.getJSON("http://212.109.96.121:5556/Mobile/MobilizmService.svc/CreateCustomer?callback=?", { customers: JSON.stringify(typesArray), origin: 167440003, status: 167440001 })
-                .done(function (json) {
-                    alert("ok");
-                })
-                .fail(function (jqxhr, textStatus, error) {
-                    alert("false");
-                });
-                //$.support.cors = true;
-                //$.ajax({
+               
+                jQuery.support.cors = true;
+                jQuery.ajax({
 
-                //    type: "GET",
-                //    contentType: "application/json;charset=utf-8",
-                //    datatype: "json",
-                //    url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/CreateCustomer",
-                //    async: false,
-                //    data: { customers: JSON.stringify(typesArray), origin: 167440003, status: 167440001 },
-                //    cache: false,
-                //    processData: true,
-                //    beforeSend: function (XMLHttpRequest) {
-                //        XMLHttpRequest.setRequestHeader("Accept", "application/json");
-                //    },
-                //    success: function (data) {//On Successfull service call      
-                //        alert("Kaydınız alınmıştır");
-                //    },
-                //    error: function (XMLHttpRequest, textStatus, errorThrown) {
-                //        alert("işlem yapılırken hata oluştu");
-                //    }
-                //});
+                    type: "GET",
+                    contentType: "application/json;charset=utf-8",
+                    datatype: "json",
+                    url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/CreateCustomer",
+                    async: false,
+                    data: { customers: JSON.stringify(typesArray), origin: 167440003, status: 167440001 },
+                    cache: false,
+                    processData: true,
+                    beforeSend: function (XMLHttpRequest) {
+                        XMLHttpRequest.setRequestHeader("Accept", "application/json");
+                    },
+                    success: function (data) {//On Successfull service call      
+                        alert("Kaydınız alınmıştır");
+                    },
+                    error: function (XMLHttpRequest, textStatus, errorThrown) {
+                        alert("işlem yapılırken hata oluştu");
+                    }
+                });
             });
 
         });
