--- a/NewUser.html
+++ b/NewUser.html
@@ -30,7 +30,7 @@
                     type: "GET",
                     contentType: "application/json;charset=utf-8",
                     datatype: "json",
-                    url: "http://mobilizim.tradesoft.com.tr:5556/Mobile/MobilizmService.svc/CreateCustomer",
+                    url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/mobile/CreateCustomer",
                     async: false,
                     data: { customers: JSON.stringify(typesArray), origin: 167440003, status: 167440001 },
                     cache: false,
