--- a/NewUser.html
+++ b/NewUser.html
@@ -31,7 +31,7 @@
                     type: "GET",
                     contentType: "application/json;charset=utf-8",
                     datatype: "json",
-                    url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/GetMenus",
+                    url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/mobile/GetMenus",
                     async: false,
                     
                     cache: false,
