--- a/NewUser.html
+++ b/NewUser.html
@@ -11,8 +11,8 @@
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>  
     <script>
-        $(document).on("pageinit", function (event) {
-
+        $(document).bind("mobileinit", function (event) {
+            alert("ok");
             $('#save').click(function () {
                 debugger;
                 var typesArray = new Array();
@@ -48,26 +48,26 @@
                     }
                 });
 
-                $.ajax({
+                //$.ajax({
 
-                    type: "GET",
-                    contentType: "application/json;charset=utf-8",
-                    datatype: "json",
-                    url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/CreateCustomer",
-                    async: false,
-                    data: { customers: JSON.stringify(typesArray), origin: 167440003, status: 167440001 },
-                    cache: false,
-                    processData: true,
-                    beforeSend: function (XMLHttpRequest) {
-                        XMLHttpRequest.setRequestHeader("Accept", "application/json");
-                    },
-                    success: function (data) {//On Successfull service call      
-                        alert("Kaydınız alınmıştır");
-                    },
-                    error: function (XMLHttpRequest, textStatus, errorThrown) {
-                        alert("işlem yapılırken hata oluştu");
-                    }
-                });
+                //    type: "GET",
+                //    contentType: "application/json;charset=utf-8",
+                //    datatype: "json",
+                //    url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/CreateCustomer",
+                //    async: false,
+                //    data: { customers: JSON.stringify(typesArray), origin: 167440003, status: 167440001 },
+                //    cache: false,
+                //    processData: true,
+                //    beforeSend: function (XMLHttpRequest) {
+                //        XMLHttpRequest.setRequestHeader("Accept", "application/json");
+                //    },
+                //    success: function (data) {//On Successfull service call      
+                //        alert("Kaydınız alınmıştır");
+                //    },
+                //    error: function (XMLHttpRequest, textStatus, errorThrown) {
+                //        alert("işlem yapılırken hata oluştu");
+                //    }
+                //});
             });
 
         });
@@ -102,7 +102,7 @@
             <input data-theme="d" type="button" value="Kaydet" id="save" />
 
         </div>
-        <div data-theme="d" data-role="footer">
+        <div data-theme="d" data-role="footer" data-position="fixed">
             <h3>Yeni Kullanıcı</h3>
         </div>
     </div>
