--- a/NewUser.html
+++ b/NewUser.html
@@ -11,7 +11,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>  
     <script>
-        $(document).bind("mobileinit", function (event) {
+        $(document).bind("pageinit", function (event) {
             alert("ok");
             $('#save').click(function () {
                 debugger;
@@ -77,7 +77,7 @@
 <body>
     <div data-role="page">
         <div data-theme="d" data-role="header">
-            <h3>Yeni Kullanıcıgg</h3>
+            <h3>Yeni KullanıcıP</h3>
         </div>
         <div  data-role="content">
 
