--- a/NewUser.html
+++ b/NewUser.html
@@ -11,7 +11,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>  
     <script>
-        $(document).bind("mobileinit", function (event) {
+        $(document).bind("pageinit", function (event) {
             alert("ok");
             $('#save').click(function () {
                 debugger;
