--- a/NewUser.html
+++ b/NewUser.html
@@ -11,8 +11,10 @@
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>  
     <script>
+
+  
         $(document).bind("pageinit", function (event) {
-            alert("ok");
+           
             $('#save').click(function () {
                 alert("triggered");
                 debugger;
@@ -27,7 +29,7 @@
                
                 $.support.cors = true;
 
-                $.getJSON("http://212.109.96.121:5556/Mobile/MobilizmService.svc/Mobile/GetMenus?callback=?", null, function (myValue) {
+                $.getJSON("http://212.109.96.121:5556/Mobile/MobilizmService.svc/Rest/GetMenus?callback=?", null, function (myValue) {
                     debugger;
                     alert("ok")
                 });
@@ -82,7 +84,7 @@
 <body>
     <div data-role="page">
         <div data-theme="d" data-role="header">
-            <h3>Yeni Kullanıcıl</h3>
+            <h3>Yeni Kullanıcıl1</h3>
         </div>
         <div  data-role="content">
 
