--- a/NewUser.html
+++ b/NewUser.html
@@ -39,7 +39,7 @@
                     type: "GET",
                     contentType: "application/json;charset=utf-8",
                     datatype: "jsonp",
-                    url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/Rest/GetMenus",
+                    url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/GetMenus",
                     async: false,                    
                     cache: false,
                     processData: true,
