--- a/NewUser.html
+++ b/NewUser.html
@@ -38,7 +38,7 @@
 
                     type: "GET",
                     contentType: "application/json;charset=utf-8",
-                    datatype: "jsonp",
+                    datatype: "json",
                     url: "http://212.109.96.121:5556/Mobile/MobilizmService.svc/GetMenus",
                     async: false,                    
                     cache: false,
