--- a/NewUser.html
+++ b/NewUser.html
@@ -21,7 +21,7 @@
                 var servicepath = "http://212.109.96.121:5556/Example/";
                 var PlumberId = "13";               
 
-                alert('{"PlumberId":"' + PlumberId + '","HouseNo":"' + HouseNo + '","PostCode":"' + PostCode + '","BoilerCode":"' + BoilerCode + '"}');
+                alert('{"PlumberId":"' + PlumberId +'"}');
 
                 $.support.cors = true;
 
