--- a/NewUser.html
+++ b/NewUser.html
@@ -23,7 +23,7 @@
                 debugger;
                 $.ajax({
 
-                    type: "GET",
+                    type: "POST",
                     dataType: "jsonp",
                     contentType: "application/json;charset=utf-8",
                     url: serviceUrl,
