--- a/NewUser.html
+++ b/NewUser.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/Mobilizm.css" rel="stylesheet" />
     <link href="css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" />
-
+   
     <script src="js/JSON.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile-1.3.2.js"></script>
@@ -19,14 +19,16 @@
                 alert("triggered");
 
                 var jsonCallbackMethod = 'spycallback493285721';
-                var serviceUrl = 'http://212.109.96.121:5556/Example/Service1.svc/SearchWorkBook';
-                debugger;
+                var serviceUrl = 'http://212.109.96.121:5556/Mobile/MobilizmService.svc/GetMenus';
+               
+                $.support.cors = true;
                 $.ajax({
 
-                    type: "POST",
-                    dataType: "jsonp",
+                    type: "GET",
+                    dataType: "json",
                     contentType: "application/json;charset=utf-8",
                     url: serviceUrl,
+                    async : false,
                     success: function (data) {//On Successfull service call      
                         alert("Kaydınız alınmıştır");
                     },
