--- a/UI/Main.html
+++ b/UI/Main.html
@@ -40,14 +40,14 @@
                 <input type="text" name="parking" id="parkingtext" value="" />
                 <a href="#dialog2" id="parkinglookup" data-transition="flip" data-ajax="true" data-inline="true" data-inline="true" data-ajax="true">..</a>
             </div>
-            <input data-theme="d" type="button" value="Kaydet" id="save" />
+            <input data-theme="b" type="button" value="Kaydet" id="save" />
         </div>
         <div data-role="footer" data-position="fixed">
             <div data-role="navbar" data-iconpos="top">
                 <ul>
-                    <li><a href="#" data-icon="plus" class="ui-btn-active">Rezervasyon Yap</a></li>
-                    <li><a href="#" data-icon="check" class="ui-btn-active">Rezervasyonlarım</a></li>
-                    <li><a href="#" data-icon="gear" class="ui-btn-active">Hesabım</a></li>
+                    <li><a href="Main.html" data-icon="plus" class="ui-btn-active">Rezervasyon Yap</a></li>
+                    <li><a href="Reservation.html" data-icon="check" class="ui-btn-active">Rezervasyonlarım</a></li>
+                    <li><a href="UpdateUser.html" data-icon="gear" class="ui-btn-active">Hesabım</a></li>
                 </ul>
             </div>
 
