--- a/UI/NewUser.html
+++ b/UI/NewUser.html
@@ -4,12 +4,12 @@
     <title>Mobilizm</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/Mobilizm.css" rel="stylesheet" />
-    <link href="css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" />
+    <link href="../css/Mobilizm.css" rel="stylesheet" />
+    <link href="../css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" />
     
-    <script src="js/JSON.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery.mobile-1.3.2.js"></script>
+    <script src="../js/JSON.js"></script>
+    <script src="../js/jquery.js"></script>
+    <script src="../js/jquery.mobile-1.3.2.js"></script>
     <script>
 
 
