--- a/UI/Reservation.html
+++ b/UI/Reservation.html
@@ -4,21 +4,42 @@
     <title>Mobilizm</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/jquery.mobile-1.3.2.min.css" rel="stylesheet" />
+
+    <link href="../css/Mobilizm.css" rel="stylesheet" />
+    <link href="../css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" />
+
+    <script src="../js/jquery.js"></script>
+    <script src="../js/JSON.js"></script>
+    <script src="../js/jquery.mobile-1.3.2.js"></script>
+    <script src="../js/GeneralFunctions.js"></script>
+    <script src="../js/PageScripts/MainPage.js"></script>
 
 </head>
 <body>
     <div data-role="page">
-        <div data-theme="b" data-role="header">
-            <h3>Reservation</h3>
+        <div data-theme="d" data-role="header">
+            <h3>Mobilizm</h3>
         </div>
         <div data-role="content">
+            <div  data--theme ="d">
+                <ul data-role="listview">
+                    <li><a href="#">Geçmiş Rezervasyonlarım</a></li>
+                    <li><a href="#">Devam eden rezervasyonlarım</a></li>
+                    <li><a href="#">Geleck Rezervasyonlarım</a></li>
+                </ul>
+            </div>
         </div>
-        <div data-theme="b" data-role="footer" data-position="fixed">
-            <h3>Reservation</h3>
+        <div data-role="footer" data-position="fixed">
+            <div data-role="navbar" data-iconpos="top">
+                <ul>
+                    <li><a href="Main.html" data-icon="plus" class="ui-btn-active">Rezervasyon Yap</a></li>
+                    <li><a href="#" data-icon="check" class="ui-btn-active">Rezervasyonlarım</a></li>
+                    <li><a href="UpdateUser.html" data-icon="gear" class="ui-btn-active">Hesabım</a></li>
+                </ul>
+            </div>
+
         </div>
     </div>
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery.mobile-1.3.2.js"></script>
+
 </body>
 </html>
