--- a/UI/Main.html
+++ b/UI/Main.html
@@ -10,14 +10,16 @@
     <link href="../css/mobiscroll.2-6-1.css" rel="stylesheet" />
 
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&v=3&libraries=geometry"></script>
+    <!--<script src="../js/deneme.js"></script>-->
     <script src="../js/JSON.js"></script>
     <script src="../js/jquery.js"></script>
     <script src="../js/BlockUI.js"></script>
-    <script src="../js/PageScripts/MainPage.js"></script>
-    <script src="../js/jquery.mobile-1.3.2.js"></script>
-    <script src="../js/mobiscroll.2-6-1.js"></script>
+     <script src="../js/mobiscroll.2-6-1.js"></script>
     <script src="../js/Mobiscrolllocalization.js"></script>
+    <script src="../js/jquery.mobile-1.3.2.js"></script>
+
     <script src="../js/GeneralFunctions.js"></script>
+    <script src="../js/PageScripts/MainPage.js"></script>
 </head>
 <body>
     <div data-role="page">
