--- a/UI/Main.html
+++ b/UI/Main.html
@@ -9,7 +9,7 @@
     <link href="../css/Overriddingjquerymobile.css" rel="stylesheet" />
     <link href="../css/mobiscroll.2-6-1.css" rel="stylesheet" />
 
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false&v=3&libraries=geometry"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&v=3&libraries=geometry"></script>
     <!--<script src="../js/deneme.js"></script>-->
     <script src="../js/JSON.js"></script>
     <script src="../js/jquery.js"></script>
