--- a/UI/EditReservation.html
+++ b/UI/EditReservation.html
@@ -8,13 +8,12 @@
     <link href="../css/Mobilizm.css" rel="stylesheet" />
     <link href="../css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet" />
      <link href="../css/mobiscroll.2-6-1.css" rel="stylesheet" />
-    <link href="../css/jquery.wijmo-pro.3.20132.15.css" rel="stylesheet" />
+
 
     <script src="../js/jquery.js"></script>
+    <script src="../js/BlockUI.js"></script>
     <script src="../js/JSON.js"></script>
     <script src="../js/jquery.mobile-1.3.2.js"></script>
-    <script src="../js/wijmo-open.js"></script>
-    <script src="../js/wijmo-pro.js"></script>
     <script src="../js/mobiscroll.2-6-1.js"></script>
     <script src="../js/Mobiscrolllocalization.js"></script>
     <script src="../js/GeneralFunctions.js"></script>
